[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Quit.png" type="Texture" id=1]
[ext_resource path="res://assets/Resume.png" type="Texture" id=2]
[ext_resource path="res://PauseScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/ResumeHover.png" type="Texture" id=4]
[ext_resource path="res://assets/QuitHover.png" type="Texture" id=5]
[ext_resource path="res://assets/InstructionsHover.png" type="Texture" id=6]
[ext_resource path="res://assets/Instructions.png" type="Texture" id=7]
[ext_resource path="res://assets/click.ogg" type="AudioStream" id=8]

[node name="PauseScreen" type="Control"]
pause_mode = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 1, 1, 1, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 67.0
margin_top = 35.0
margin_right = 1307.0
margin_bottom = 754.0
rect_scale = Vector2( 0.15, 0.15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1240.0
margin_bottom = 719.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_right = 1240.0
margin_bottom = 719.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 237.0
texture_normal = ExtResource( 2 )
texture_focused = ExtResource( 4 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 241.0
margin_right = 1240.0
margin_bottom = 478.0
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 5 )

[node name="TextureButton3" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 482.0
margin_right = 1240.0
margin_bottom = 719.0
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
